--- a/Football Testing.ipynb
+++ b/Football Testing.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DESUSAI\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "C:........AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -932,8 +932,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:/Users/DESUSAI/Desktop/New folder/Fifa2018.csv\",sep=';')\n",
-    "rslt = pd.read_csv(\"C:/Users/DESUSAI/Desktop/New folder/results.csv\",sep=',')\n",
+    "df = pd.read_csv(\"C:.....Fifa2018.csv\",sep=';')\n",
+    "rslt = pd.read_csv(\"C:...../results.csv\",sep=',')\n",
     "\n",
     "rslt"
    ]
