--- a/Football Testing.ipynb
+++ b/Football Testing.ipynb
@@ -2817,6 +2817,7 @@
     }
    ],
    "source": [
+    "\n",
     "(df.groupby('Team')['difference']\n",
     "      .mean()\n",
     "      .plot(kind='bar', title='goal scored', yerr=df.groupby('Team')['difference'].std())\n",
@@ -3174,37 +3175,41 @@
     }
    ],
    "source": [
-    "i=0\n",
-    "K=0\n",
-    "j=0\n",
-    "global Team1\n",
-    "global Team2\n",
-    "Team1 = pd.DataFrame(columns=['Group'])\n",
-    "for K in range(0,len(df.Group)-1):\n",
-    "    i=K+1\n",
-    "    while ((df.Group[K])==(df.Group[i])):\n",
-    "        model = pm.Model();\n",
-    "        with model:\n",
-    "            GoalScoredTeam1 = pm.Poisson(\"GoalScoredTeam1\",df.goal_scored[K]/df.No_of_matches[K])\n",
-    "            GoalConcededTeam1 = pm.Poisson(\"GoalConcededTeam1\",df.goal_conceded[K]/df.No_of_matches[K])\n",
-    "            GoalScoredTeam2 = pm.Poisson(\"GoalScoredTeam2\",df.goal_scored[i]/df.No_of_matches[i])\n",
-    "            GoalConcededTeam2 = pm.Poisson(\"GoalConcededTeam2\",df.goal_conceded[i]/df.No_of_matches[i])\n",
-    "            Team1Win = pm.Poisson(\"Team1Win\",GoalScoredTeam1+GoalConcededTeam2)\n",
-    "            Team2Win = pm.Poisson(\"Team2Win\",GoalScoredTeam2+GoalConcededTeam1)\n",
-    "            trace= pm.sample(100000,tune=50000,random_seed=123,progressbar=True)\n",
-    "            Team1.at[j,'Group']=df.Group[K]\n",
-    "            Team1.at[j,'Home_Team']=df.Team[K]\n",
-    "            Team1.at[j,'Away_Team']=df.Team[i]                                  \n",
-    "            Team1.at[j,'HomeWon']=trace['Team1Win'].mean()\n",
-    "            Team1.at[j,'AwayWon']=trace['Team2Win'].mean()\n",
-    "            Team1.at[j,'Goal_scored_Home']=trace['GoalScoredTeam1'].mean()\n",
-    "            Team1.at[j,'Goal_scored_Away']=trace['GoalScoredTeam2'].mean()\n",
-    "            i+=1\n",
-    "            j+=1            \n",
-    "            if(i==len(df.Group)):\n",
-    "                i=k+1\n",
-    "                \n",
-    "            \n",
+    "def simulategroupMatches(df):\n",
+    "    i=0\n",
+    "    K=0\n",
+    "    j=0\n",
+    "    global Team1\n",
+    "    global Team2\n",
+    "    Team1 = pd.DataFrame(columns=['Group'])\n",
+    "    for K in range(0,len(df.Group)-1):\n",
+    "        i=K+1\n",
+    "        while ((df.Group[K])==(df.Group[i])):\n",
+    "            model = pm.Model();\n",
+    "            with model:\n",
+    "                GoalScoredTeam1 = pm.Poisson(\"GoalScoredTeam1\",df.goal_scored[K]/df.No_of_matches[K])\n",
+    "                GoalConcededTeam1 = pm.Poisson(\"GoalConcededTeam1\",df.goal_conceded[K]/df.No_of_matches[K])\n",
+    "                GoalScoredTeam2 = pm.Poisson(\"GoalScoredTeam2\",df.goal_scored[i]/df.No_of_matches[i])\n",
+    "                GoalConcededTeam2 = pm.Poisson(\"GoalConcededTeam2\",df.goal_conceded[i]/df.No_of_matches[i])\n",
+    "                Team1Win = pm.Poisson(\"Team1Win\",GoalScoredTeam1+GoalConcededTeam2)\n",
+    "                Team2Win = pm.Poisson(\"Team2Win\",GoalScoredTeam2+GoalConcededTeam1)\n",
+    "                trace= pm.sample(100000,tune=50000,random_seed=123,progressbar=True)\n",
+    "                Team1.at[j,'Group']=df.Group[K]\n",
+    "                Team1.at[j,'Home_Team']=df.Team[K]\n",
+    "                Team1.at[j,'Away_Team']=df.Team[i]                                  \n",
+    "                Team1.at[j,'HomeWon']=trace['Team1Win'].mean()\n",
+    "                Team1.at[j,'AwayWon']=trace['Team2Win'].mean()\n",
+    "                Team1.at[j,'Goal_scored_Home']=trace['GoalScoredTeam1'].mean()\n",
+    "                Team1.at[j,'Goal_scored_Away']=trace['GoalScoredTeam2'].mean()\n",
+    "                i+=1\n",
+    "                j+=1            \n",
+    "                if(i==len(df.Group)):\n",
+    "                    i=k+1\n",
+    "    return Team1    \n",
+    "\n",
+    "                    \n",
+    "                    \n",
+    "simulategroupMatches(df)            \n",
     "\n"
    ]
   },
@@ -3849,39 +3854,40 @@
    },
    "outputs": [],
    "source": [
-    "GroupR = pd.DataFrame(df.Group,columns=['Group'])\n",
-    "GroupR['Team'] = df['Team']\n",
-    "i=0\n",
-    "j=0\n",
-    "k=0\n",
-    "for i in range(0,len(GroupR)):    \n",
-    "    hwon=0      \n",
-    "    hgoalScored=0       \n",
-    "    AgoalScored=0            \n",
-    "    while(j<=len(Team1)-1) and (GroupR.Team[i] == Team1.Home_Team[j]):       \n",
-    "        hgoalScored+=Team1.Goal_scored_Home[j]\n",
-    "        GroupR.at[i,'GoalScored'] =hgoalScored\n",
-    "        AgoalScored+=Team1.Goal_scored_Away[j]\n",
-    "        GroupR.at[i,'GoalConceded']=AgoalScored \n",
-    "        if (Team1.HomeWon[j]>Team1.AwayWon[j]):\n",
-    "            hwon +=3 \n",
-    "            GroupR.at[i,'Points'] = hwon                       \n",
-    "        j+=1        \n",
-    "    for k in range(0,len(Team1)):        \n",
-    "        if (GroupR.Team[i]==Team1.Away_Team[k]):\n",
-    "            \n",
-    "            hgoalScored+=Team1.Goal_scored_Away[k]        \n",
-    "            AgoalScored+=Team1.Goal_scored_Home[k]\n",
-    "            GroupR.at[i,'GoalConceded']=hgoalScored \n",
-    "            GroupR.at[i,'GoalScored'] =AgoalScored\n",
+    "def GroupResult(Team1):\n",
+    "    GroupR = pd.DataFrame(df.Group,columns=['Group'])\n",
+    "    GroupR['Team'] = df['Team']\n",
+    "    i=0\n",
+    "    j=0\n",
+    "    k=0\n",
+    "    for i in range(0,len(GroupR)):\n",
+    "        hwon=0    \n",
+    "        hgoalScored=0       \n",
+    "        AgoalScored=0            \n",
+    "        while(j<=len(Team1)-1) and (GroupR.Team[i] == Team1.Home_Team[j]):       \n",
+    "            hgoalScored+=Team1.Goal_scored_Home[j]\n",
+    "            GroupR.at[i,'GoalScored'] =hgoalScored\n",
+    "            AgoalScored+=Team1.Goal_scored_Away[j]\n",
+    "            GroupR.at[i,'GoalConceded']=AgoalScored \n",
+    "            if (Team1.HomeWon[j]>Team1.AwayWon[j]):\n",
+    "                hwon +=3\n",
+    "                GroupR.at[i,'Points'] = hwon                   \n",
+    "            j+=1        \n",
+    "        for k in range(0,len(Team1)):        \n",
+    "            if (GroupR.Team[i]==Team1.Away_Team[k]):              \n",
+    "                hgoalScored+=Team1.Goal_scored_Away[k]        \n",
+    "                AgoalScored+=Team1.Goal_scored_Home[k]\n",
+    "                GroupR.at[i,'GoalConceded']=hgoalScored \n",
+    "                GroupR.at[i,'GoalScored'] =AgoalScored\n",
     "            if (Team1.HomeWon[k]<Team1.AwayWon[k]):\n",
     "                hwon +=3 \n",
     "                GroupR.at[i,'Points'] = hwon              \n",
-    "                \n",
+    "    return GroupR \n",
+    "GroupResult(Team1)             \n",
     "                \n",
     "                \n",
     " \n",
-    "    GroupR.fillna(0) "
+    " "
    ]
   },
   {
